# immo-scraper

./: .env.example  .gitignore  README.md  immo_data.py  immo_scraper.py  immowelt.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: browser.py  immo_data.py  immo_platform.py  immonet.py  immoscout.py  immowelt.py  kleinanzeigen.py  rating.py  sparkasse.py  url.py  utils.py  vr_immobilien.py  xls.py
tests/: conftest.py  test_browser.py  test_immo_data.py  test_platforms.py  test_url.py  test_utils.py
