[tool.poetry]
name = "immo-scraper"
version = "0.0.1"
description = "Collects and processes data from different real estate platforms."
authors = ["Mario Kohlhoff"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.2.2"
openpyxl = "^3.1.5"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
selenium = "^4.41.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"